--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "ethers": "^5.4.7",
   "hardhat": "^2.14.0",
   "hardhat-gas-reporter": "^1.0.10",
+  "hardhat-tracer": "^3.2.1",
   "solidity-coverage": "^0.8.0",
   "ts-node": ">=8.0.0",
   "typechain": "^8.1.0",
